--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="eula_title">Disclaimer</string>
     <string name="eula_accept">Accept</string>
     <string name="eula_refuse">Refuse</string>
-    <string name="version">Version: 17.09.28</string>
+    <string name="version">Version: N/A</string>
     <style name="ButtonText">
     <item name="android:layout_width">fill_parent</item>
     <item name="android:layout_height">wrap_content</item>
@@ -48,53 +48,16 @@
      <item>Medtronic Pump</item>
      <item>Both (sensor + pump support)</item>
     </string-array>
-    <string-array name="pumpPeriodList">
-     <item>30 min.</item>
-     <item>60 min.</item>
-     <item>90 min.</item>
-     <item>120 min.</item>
-    </string-array>
     <string-array name="pumpperiod_values">
      <item>1</item>
      <item>2</item>
      <item>3</item>
      <item>4</item>
     </string-array>
-     <string-array name="historicPeriodList">
-     <item>5 min.</item>
-     <item>10 min.</item>
-     <item>15 min.</item>
-     <item>20 min.</item>
-    </string-array>
     <string-array name="levelList">
      <item>Error</item>
      <item>Info</item>
      <item>Debug</item>
     </string-array>
-     <string-array name="historicMixPeriodList">
-     <item>10 min.</item>
-     <item>15 min.</item>
-     <item>20 min.</item>
-     <item>25 min.</item>
-     <item>30 min.</item>
-     <item>35 min.</item>
-     <item>40 min.</item>
-     <item>45 min.</item>
-     <item>50 min.</item>
-     <item>55 min.</item>
-     <item>60 min.</item>
-    </string-array>
-     <string-array name="historicMixPeriodVal">
-     <item>1</item>
-     <item>2</item>
-     <item>3</item>
-     <item>4</item>
-     <item>5</item>
-     <item>6</item>
-     <item>7</item>
-     <item>8</item>
-     <item>9</item>
-     <item>10</item>
-     <item>11</item>
-    </string-array>
+
 </resources>
